--- a/capstone_front/src/component/CSS/Loading.css
+++ b/capstone_front/src/component/CSS/Loading.css
@@ -8,12 +8,14 @@ body {
 }
 
 .loader {
+  display: inline-flex;
   position: relative;
+  align-self: center;
   border: 16px solid #f3f3f3;
   border-top: 16px solid #840418;
   border-radius: 50%;
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   animation: spin 2s linear infinite;
 
 }
@@ -29,6 +31,7 @@ body {
 }
 
 h1{
+  margin-top: 0%;
   position: relative;
 }
 
