--- a/capstone_front/src/component/CSS/LogIn.css
+++ b/capstone_front/src/component/CSS/LogIn.css
@@ -27,7 +27,7 @@
     padding: 20pt;
 }
 
-#login-form input {
+#loginform input {
     width: 100%;
     height: 48px;
     padding: 0 10px;
@@ -38,11 +38,12 @@
     background-color: #F8F8F8;
 }
 
-#login-form input::placeholder {
+#loginform input::placeholder {
     color: #D2D2D2;
+    font-size: 14px;
 }
 
-#login-form input[type="submit"] {
+#loginform input[type="submit"] {
     color: #fff;
     font-size: 16px;
     background-color: #840418;
@@ -50,22 +51,22 @@
     border: none;
 }
 
-#login-form input[type="checkbox"] {
+#loginform input[type="checkbox"] {
     display: none;
 }
 
-#login-form label {
+#loginform label {
     color: #999999;
 }
 
-#login-form input[type="checkbox"] + label {
+#loginform input[type="checkbox"] + label {
     cursor: pointer;
     padding-left: 26px;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
-#login-form input[type="checkbox"]:checked + label {
+#loginform input[type="checkbox"]:checked + label {
     background-repeat: no-repeat;
     background-size: contain;
 }
