--- a/capstone_front/src/component/CSS/List.css
+++ b/capstone_front/src/component/CSS/List.css
@@ -8,7 +8,7 @@
     font-Size: 40pt;
     font-Weight: bold;
     text-Align: center;
-    margin-top: -20%;
+    margin-top: -40%;
 }
 
 .prompt {
@@ -18,7 +18,7 @@
     font-Size: 40pt;
     font-Weight: bold;
     text-Align: center;
-    margin-top: 190%;
+    margin-top: 200%;
     margin-bottom: 10%;
 }
 
@@ -33,7 +33,7 @@
     white-space: pre-wrap;
     overflow-wrap: break-word;
     align-self: center;
-    margin-top: 250%;
+    margin-top: 260%;
     margin-left: -2%;
     margin-bottom: 10%;
 }
@@ -109,15 +109,30 @@ label:before {
     text-align: center;
     display: inline-block;
     font-size: 50px;
+    font-weight: bold;
     margin: 4px 2px;
     cursor: pointer;
+}
+
+.addbutton {
+    position: absolute;
+    background-color: #840418;
+    top: 1300px;
+    left: 200px;
+    color: white;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 13pt;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 
 :checked+label img {
     transform: scale(0.9);
     z-index: -1;
 }
-
 
 .works_container {
     display: flex;
