--- a/capstone_front/src/component/CSS/Loading.css
+++ b/capstone_front/src/component/CSS/Loading.css
@@ -42,7 +42,7 @@ h1 span {
   top: 20px;
   display: inline-block;
   animation: bounce .3s ease infinite alternate;
-  font-family: 'Moirai One', cursive;
+  font-family: 'Cafe24Ssurround', cursive;
   font-size: 48px;
   color: #840418;
   text-shadow: 0 1px 0 #CCC,
