--- a/capstone_front/src/component/CSS/LogIn.css
+++ b/capstone_front/src/component/CSS/LogIn.css
@@ -20,7 +20,7 @@
 }
 
 .login-wrapper h1 {
-    font-family: 'Moirai One';
+    font-family: 'Cafe24Ssurround';
     font-size: 40pt;
     color: #840418;
     text-align: center;
