--- a/capstone_front/src/component/CSS/Main.css
+++ b/capstone_front/src/component/CSS/Main.css
@@ -2,6 +2,27 @@
     display: none;
 }
 
+@font-face {
+    font-family: 'Cafe24Ssurround';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.maintitle{
+    font-family: 'Cafe24Ssurround';
+    position: sticky;
+    margin-top: 35%;
+    margin-bottom: 0px;
+}
+
 #login{
     display: flex;
     justify-content: center;
@@ -9,4 +30,8 @@
     background-color: transparent;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
+}
+
+p{
+    font-family: 'GmarketSansMedium';
 }
