--- a/capstone_front/src/component/CSS/Example.css
+++ b/capstone_front/src/component/CSS/Example.css
@@ -5,38 +5,44 @@
 }
 
 h2 {
-    padding-bottom: 50px;
+    padding-bottom: 60px;
+    font-size: 17pt;
+    font-family: 'GmarketSansMedium'
 }
 
 .Display{
     position: relative;
-    justify-content: center;
+    display: inline-block;
+    justify-content: left;
     align-items: center;
     flex-direction: column;
 }
 
 .howtotitle {
     position: static;
-    font-Family: 'Moirai One';
+    font-family: 'Cafe24Ssurround';
     color: #840418;
     font-Size: 40pt;
     font-Weight: bold;
     text-Align: center;
-    margin-top: 66%;
+    margin-top: 70%;
 }
 
 .howtobutton {
     border: none;
-    border-radius: 100vh;
-    background-color: #dfdfdf;
+    border-radius: 10vh;
+    background-color: #840418;
     bottom: 0px;
     right: 0px;
     position: fixed;
-    font-Family: 'Moirai One';
-    color: #840418;
-    font-Size: 30pt;
+    font-family: 'Cafe24Ssurround';
+    color: #FFFFFF;
+    font-Size: 32pt;
     font-Weight: bold;
     text-Align: center;
     align-items: right;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 8px;
     display: flex;
 }
