--- a/capstone_front/src/component/CSS/Register.css
+++ b/capstone_front/src/component/CSS/Register.css
@@ -38,7 +38,7 @@ td {
 }
 
 h1 {
-    font-family: 'Moirai One';
+    font-family: 'Cafe24Ssurround';
     color: #840418;
     font-size: 50pt;
     text-align: center;
