--- a/capstone_front/src/component/CSS/Result.css
+++ b/capstone_front/src/component/CSS/Result.css
@@ -1,12 +1,12 @@
 .resulttitle {
-    position: static;
-    font-Family: 'Moirai One';
-    color: #840418;
-    font-Size: 40pt;
-    font-Weight: bold;
-    text-Align: center;
-    margin-top: 30%;
-    margin-bottom: 5%;
+  position: static;
+  font-family: 'Cafe24Ssurround';
+  color: #840418;
+  font-Size: 40pt;
+  font-Weight: bold;
+  text-Align: center;
+  margin-top: 30%;
+  margin-bottom: 5%;
 }
 
 .resultDisplay {
@@ -14,4 +14,23 @@
   position: relative;
   justify-content: center;
   align-items: center;
+}
+
+.retrybutton {
+  border: none;
+  border-radius: 10vh;
+  background-color: #840418;
+  bottom: 70px;
+  right: 0px;
+  position: fixed;
+  font-family: 'Cafe24Ssurround';
+  color: #FFFFFF;
+  font-Size: 32pt;
+  font-Weight: bold;
+  text-Align: center;
+  align-items: right;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 8px;
+  display: flex;
 }
